name: events-fetcher
version: 0.1
synopsis: Simple server that fetches events from Google Calendar and/or CalDAV and caches them
homepage: https://github.com/duairc/events-fetcher
license: AGPL-3
license-file: LICENSE
author: Shane O'Brien
maintainer: shane@duairc.com
category: Web
build-type: Simple
cabal-version: >= 1.10

executable events-fetcher
    main-is: events-fetcher.hs
    default-language: Haskell2010
    ghc-options: -Wall -O3 -threaded
    build-depends:
        aeson,
        base,
        bytestring,
        ConfigFile,
        directory,
        hslogger,
        http-client,
        http-client-tls,
        iCalendar,
        IntervalMap,
        lens,
        lens-aeson,
        network,
        network-uri,
        old-locale,
        text,
        time,
        unix,
        wreq,
        xml-conduit,
        xml-lens
